# avl-dataset-convention

./: .gitignore  CHANGELOG.md  CONVENTION.md  LICENSE  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
avl/: __init__.py  cli.py  dataset.py  verify.py
docs/: index.md  requirements.txt
docs/about/: index.md  license.md
docs/datasets/: catalogue.md  conventions.md  index.md
docs/design/: development.md  index.md  reuse.md  testing.md
docs/design/exploitation/: index.md
docs/design/processing/: index.md
docs/guide/: index.md  python-api.md  tools.md
docs/guide/exploitation/: index.md
docs/guide/processing/: index.md
notebooks/: verify.ipynb
src/: __init__.py  dataset.py  main.py
