[metadata]
name = avl
version = attr: avl.__version__
description = AVL Data Exploitation Tools
long_description = file: README.md, CHANGES.md, LICENSE.md
keywords = agriculture, earth observation, ard, data cubes, xarray
license = MIT
author = Norman Fomferra

[options]
packages = avl
install_requires =
    click >= 7

[options.entry_points]
console_scripts =
    avl = avl.cli:main
